# ffmpeg-fake

./: .gitignore  CMakeLists.txt  README.md  build-linux-amd64.sh  build-mac-amd64.sh  build-mac-arm64.sh  build-win-amd64.sh
docs/: configurations.md
scripts/: audio.sh.in  debug.sh.in  mac.sh.in  release.sh.in  windows.sh.in
src/: CMakeLists.txt  FFmpegTargets.cmake.in
src/cmake/: FFmpegTargets-debug.cmake  FFmpegTargets-release.cmake
src/linux-amd64/debug/lib/: libavdevice.so.59.7.100  libavdevice.so.59.8.101  libavfilter.so.8.49.101  libavutil.so.57.28.100  libavutil.so.57.39.101  libswresample.so.4.7.100  libswresample.so.4.9.100  libswscale.so.6.7.100  libswscale.so.6.8.112
src/linux-amd64/debug/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/linux-amd64/lib/: libavcodec.so.59.37.100  libavdevice.so.59.7.100  libavdevice.so.59.8.101  libavfilter.so.8.49.101  libavformat.so.59  libavformat.so.59.27.100  libavformat.so.59.34.101  libavutil.so.57.28.100  libavutil.so.57.39.101  libswresample.so.4.7.100  libswresample.so.4.9.100  libswscale.so.6.7.100  libswscale.so.6.8.112
src/linux-amd64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/mac-amd64/debug/lib/: libavdevice.59.7.100.dylib  libavdevice.59.8.101.dylib  libavformat.59.27.100.dylib  libavformat.59.34.102.dylib  libavutil.57.28.100.dylib  libavutil.57.43.100.dylib  libswresample.4.7.100.dylib  libswresample.4.9.100.dylib  libswscale.6.7.100.dylib  libswscale.6.8.112.dylib
src/mac-amd64/debug/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/mac-amd64/include/libavutil/: ffversion.h
src/mac-amd64/lib/: libavcodec.59.dylib  libavdevice.59.7.100.dylib  libavdevice.59.8.101.dylib  libavfilter.8.53.100.dylib  libavfilter.dylib  libavformat.59.27.100.dylib  libavformat.59.34.102.dylib  libavutil.57.28.100.dylib  libavutil.57.43.100.dylib  libswresample.4.7.100.dylib  libswresample.4.9.100.dylib  libswscale.6.7.100.dylib  libswscale.6.8.112.dylib
src/mac-amd64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/mac-arm64/debug/lib/: libavdevice.59.7.100.dylib  libavformat.59.27.100.dylib  libavutil.57.28.100.dylib  libswresample.4.7.100.dylib  libswscale.6.7.100.dylib
src/mac-arm64/debug/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/mac-arm64/lib/: libavdevice.59.7.100.dylib  libavfilter.8.44.100.dylib  libavformat.59.27.100.dylib  libavutil.57.28.100.dylib  libswresample.4.7.100.dylib  libswscale.6.7.100.dylib
src/mac-arm64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/windows-amd64/debug/lib/: avcodec.lib  avdevice.lib  avfilter-8.def  avfilter.lib  avformat.lib  avutil-57.def  avutil.lib  swresample.lib  swscale.lib
src/windows-amd64/debug/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/windows-amd64/include/libavutil/: ffversion.h
src/windows-amd64/lib/: avcodec-59.def  avcodec.lib  avdevice.lib  avfilter.lib  avformat-59.def  avformat.lib  avutil-57.def  avutil.lib  swresample.lib  swscale.lib
src/windows-amd64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
